Fixed spacing between hero and grid

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -46,32 +46,25 @@ h1, h2 {
 .hero-section {
     position: relative;
     z-index: 1;
-    height: 60vh;
+    min-height: 60vh;
     top: 80px;
-    padding: 0;
     margin: 0;
     line-height: 1.2;
     justify-content: center;
     letter-spacing: -0.15em;
 }
 
+.hero-section h1 {
+    padding-top: 40px;
+}
+
 .hero-section img {
     margin: 0;
 }
 
-.hero-section .load-1st {
-    padding: 20px;
-
-}
-
-
-.hero-section .load-3rd {
-    padding-bottom: 100px;
-}
-
 .box{
     position: relative;
-    padding-top: 50px;
+    padding-top: 20px;
 }
 
 .box-entering {
